# finance-agent

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: app.css  app.js  index.html  tokens.css
src/financeagent/: config.py
src/financeagent/agent/: __init__.py  core.py
src/financeagent/api/: main.py
src/financeagent/tools/: __init__.py  budget.py  charts.py  market_data.py  portfolio.py  schemas.py  utility.py
