[project]
name = "financeagent"
version = "0.1.0"
description = "Personal finance ReAct agent with a streaming chat API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "openai>=1.30",
    "pydantic>=2.7",
    "tavily-python>=0.3",
    "requests>=2.32",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
]

[tool.vercel]
entrypoint = "src.financeagent.api.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
